--- a/espanol/index.html
+++ b/espanol/index.html
@@ -72,7 +72,27 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 <link rel="icon" href="https://i.postimg.cc/t4kYvS23/03-FAVICON.png" sizes="192x192" />
 <link rel="apple-touch-icon" href="https://i.postimg.cc/t4kYvS23/03-FAVICON.png" />
 <meta name="msapplication-TileImage" content="https://i.postimg.cc/t4kYvS23/03-FAVICON.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" /></head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+	
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '653000543216942');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=653000543216942&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+	
+</head>
 <body class="page-template page-template-elementor_canvas page page-id-10 wp-custom-logo elementor-default elementor-template-canvas elementor-kit-7 elementor-page elementor-page-10">
 			<div data-elementor-type="wp-page" data-elementor-id="10" class="elementor elementor-10">
 									<section class="elementor-section elementor-top-section elementor-element elementor-element-51428708 elementor-section-height-full elementor-section-boxed elementor-section-height-default elementor-section-items-middle" data-id="51428708" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;_ha_eqh_enable&quot;:false}">
