--- a/espanol/index.html
+++ b/espanol/index.html
@@ -113,13 +113,13 @@ src="https://www.facebook.com/tr?id=653000543216942&ev=PageView&noscript=1"
 				<span class="elementor-headline-dynamic-wrapper elementor-headline-text-wrapper">
 					<span class="elementor-headline-dynamic-text elementor-headline-text-active">50</span>
 				</span>
-					<span class="elementor-headline-plain-text elementor-headline-text-wrapper">seleccionado para ganar nuestro:</span>
+					<span class="elementor-headline-plain-text elementor-headline-text-wrapper">seleccionados para ganar nuestro:</span>
 					</h3>
 				</div>
 				</div>
 				<div class="elementor-element elementor-element-424bf3c0 elementor-widget elementor-widget-text-editor" data-id="424bf3c0" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<destaque> GRUPO VIP + CLASE LIBRE + SOPORTE EXCLUSIVO DE MI EQUIPO.</destaque>						</div>
+							<destaque> GRUPO VIP + CLASE GRATIS + SOPORTE EXCLUSIVO DE MI EQUIPO.</destaque>						</div>
 				</div>
 				<div class="elementor-element elementor-element-3e304f6a elementor-widget elementor-widget-text-editor" data-id="3e304f6a" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
